--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ title: "404"
 sub_title: |
   Page Not Found <a href="/">Go Home</a>
 permalink: /404.html
-black_menu: true
-header_style: "one"
+<!-- black_menu: true
+header_style: "one" -->
 ---
 
 <div class="pt-120"></div>
